--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="gameInfo">
         <h1>Welcome to tic tac toe game</h1>
-        <div>
+        <div class="info-div">
             <span class="info">Turn for </span>
             <button id="reset">Restart</button>
         </div>
